feat: godog as api test (#10)
